welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: ';' expected but 'false' found.
  case_=> false
          ^